# LifeOs

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
docs/: architecture.md  coding-guidelines.md  development.md  folder_structure.md  hld.md  prd.md  roadmap.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-fastapi.md  ADR-003-postgresql.md  ADR-004-qdrant.md  ADR-005-gemini.md
